# halo2-tornado-cash

./: Cargo.toml
benches/: full.rs
src/: circuit.rs  client.rs  hash_to_field.rs  keys.rs  lib.rs  merkle.rs  poseidon.rs  proof.rs
src/gadget/: merkle.rs  swap.rs
src/gadget/merkle/: chip.rs
src/gadget/poseidon/: pow5t3.rs
src/gadget/rln/: chip.rs
src/poseidon/: fp.rs  fq.rs  grain.rs  mds.rs  p128pow5t3.rs
