[package]
name = "tornado-cash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
sha2 = "0.10.0"
ff = "0.13.0"
byte-io = "0.1.1"
num-bigint = "0.4"
rand = "0.8.4"

cfg-if = "1.0.0"

halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }

[dev-dependencies]
criterion = "0.3"


[lib]
name = "rln"
path = "src/lib.rs"

[[bench]]
name = "full"
harness = false

[[bench]]
name = "merkle"
harness = false

